2011-07-19  Stuart Caie <kyzer@4u.net>

	* doc/ja/cabextract.1: Katsumi Saito updated the Japanese translation
	of cabextract's manpage to include the -t option. Thanks again!

2011-05-11  Stuart Caie <kyzer@4u.net>

	* src/cabinfo.c: changed the largefile detection header to the same
	as mspack/system.h

2011-04-27  Stuart Caie <kyzer@4u.net>

	* src/cabextract.c: changed char* to const char* in line with changes
	in libmspack. See mspack/ChangeLog for more details.

2011-04-25  Stuart Caie <kyzer@4u.net>

	* load_spanning_cabinets(): Print the error code caused by a failed
	cabinet merge, before ruining the error code by calling cabd->close().
	Thanks to Drew D'Addesio for reporting the problem.

2011-01-19  Stuart Caie <kyzer@4u.net>

	* doc/wince_cab_format.html: Identified a new file flag in the WinCE
	header file. Thanks to Paul Sokolovsky for asking me to look into it.

2010-07-19  Stuart Caie <kyzer@4u.net>

	* mspack: MS-ZIP recovery now recovers more bytes. Also, when a file
	fails to unpack because of a read error during decompression, all
	subsequent files in the same folder will give the same error, instead
	of claiming to be OK. See mspack/ChangeLog for full details.

2010-07-17  Stuart Caie <kyzer@4u.net>

	* src/cabsplit: added new program, cabsplit, which splits cabinet
	files into one cabinet file per folder. Useful for debugging.

2010-06-17  Stuart Caie  <kyzer@4u.net>

	* configure.ac: Added --external-libmspack option, which allows
	you to use the libmspack library installed on your system rather
	than the copy bundled with cabextract. Thanks to Patrice Dumas
	for the patch.

2010-06-10  Stuart Caie  <kyzer@4u.net>

	* mspack: bugs in MS-ZIP and Quantum decoders have been fixed. See
	mspack/ChangeLog for full details.

2010-05-06  Stuart Caie  <kyzer@4u.net>

	* configure.ac, cabextract.c: added support for the one-arg mkdir()
	found in the MinGW32 environment. Thanks to Kevin O'Rourke for
	reporting this.
	